# cyborgbackup

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.rst  Vagrantfile  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.yml  pyproject.toml  requirements.txt  secret.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: dockerimage-dev.yml  dockerimage.yml
cyborgbackup/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
cyborgbackup/api/: apps.py  fields.py  pagination.py  parsers.py  permissions.py  renderers.py  serializers.py  swagger.py  tests.py  urls.py  versioning.py  views.py
cyborgbackup/main/: __init__.py  apps.py  auth_token.py  constants.py  managers.py  routing.py  signals.py  tasks.py  validators.py
cyborgbackup/ui/: urls.py
debian/: changelog  control  copyright  cyborgbackup.cyborgbackup-callback-receiver.service  cyborgbackup.cyborgbackup-celery-beat.service  cyborgbackup.cyborgbackup-celery-worker-job.service  cyborgbackup.cyborgbackup-celery-worker-main.service  cyborgbackup.cyborgbackup-celery.service  cyborgbackup.cyborgbackup-daphne.service  cyborgbackup.cyborgbackup-uwsgi.service  cyborgbackup.cyborgbackup-workers.service  cyborgbackup.cyborgbackup.service  cyborgbackup.install  cyborgbackup.postinst  cyborgbackup.postrm  cyborgbackup.preinst  cyborgbackup.prerm  rules
docs/: Makefile  api.rst  conf.py  index.rst  requirements.txt
docs/_static/: konami.js  (+1 more)
src/: manage.py
tests/: cyborgbackup_api_tests.py  fixtures_tests.json
(+402 files in other folders)
