[metadata]
name = cyborgbackup
author = Gaëtan Ferez
author_email = gaetan@cyborgbackup.dev
version = attr: cyborgbackup.__version__

[options]
packages =
    cyborgbackup
zip_safe = False
include_package_data = True


[options.entry_points]
console_scripts =
    cyborgbackup-manage = cyborgbackup:manage